<resources>
    <string name="app_name">Fapp</string>
    <string name="Personal_Information">Personal Information</string>
    <string name="Notifications">Notifications</string>
    <string name="Security">Security</string>
    <string name="Language">Language</string>
    <string name="Dark_Mode">Dark Mode</string>
    <string name="Help_Centre">Help Centre</string>
    <string name="Logout">Logout</string>
    <string name="Settings">Settings</string>
    <string name="Profile">profile</string>
    <string name="theme">theme</string>
    <string name="language_english_us">Language English US</string>
    <string name="Notification">Notification</string>
    <string name="Personal_information">Personal Information</string>
    <string name="Back">Back</string>
    <string name="Create_Articles">Create Articles</string>
    <string name="article">article</string>
    <string name="Add_cover_image">Add cover image</string>
    <string name="Title">Title</string>
    <string name="write_your_article_here">Write your article here…</string>
    <string name="publish">Publish</string>
    <string name="profile_icon">Profile Icon</string>
    <string name="display_name">Display Name</string>
    <string name="username">Username</string>
    <string name="twitter">Twitter</string>
    <string name="facebook">Facebook</string>
    <string name="linkedin">LinkedIn</string>
    <string name="phone_number">Phone Number</string>
    <string name="contacts">Contacts:</string>
    <string name="description">Description</string>


</resources>
