<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Profile"
        android:textSize="24sp"
        android:layout_marginTop="40dp"
        android:textStyle="bold" />

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:contentDescription="@string/profile_icon"
        android:src="@drawable/profile"
        android:layout_margin="15dp"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/display_name"
        android:layout_marginBottom="10dp"
        android:importantForAutofill="no"
        android:inputType="" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:layout_marginBottom="10dp"
        android:importantForAutofill="no"
        android:inputType="" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/description"
        android:layout_marginBottom="20dp"
        android:importantForAutofill="no"
        android:inputType="" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contacts"
        android:textStyle="bold" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/phone_number"
        android:layout_marginBottom="10dp"
        android:importantForAutofill="no"
        android:inputType="" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/twitter"
        android:layout_marginBottom="10dp"
        android:importantForAutofill="no"
        android:inputType="" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/facebook"
        android:layout_marginBottom="10dp"
        android:importantForAutofill="no"
        android:inputType="" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/linkedin"
        android:importantForAutofill="no"
        android:inputType="" />

</LinearLayout>